--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# General
+data/
+testing/
+testing*
+output/
+
+# SVM files
+*.rsl
+*.pdt
+*.mtx
+*.ver
+*.lay
+
+# GIS data files
+*.cpg
+*.ctf
+*.dbf
+*.shp
+*.shx
+*.prj
+*.geojson
+*.gpkg
+*.qgz
+*.xml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -5,6 +30,9 @@ __pycache__/
 
 # C extensions
 *.so
+
+# Visual Studio
+.vs/
 
 # Distribution / packaging
 .Python
